opam-version: "2.0"
maintainer: "owlbarn"
authors: [ "Ta-Chu Calvin Kao" ]
license: "MIT"
homepage: "https://github.com/tachukao/owl_opt"
dev-repo: "git+https://github.com/tachukao/owl_opt.git"
bug-reports: "https://github.com/tachukao/owl_opt/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "1.5.0"}
  "owl-base" {>= "0.6.0"}
  "ppxlib"
]
synopsis: "Ppx tool for owl-opt"
